--- a/index.html
+++ b/index.html
@@ -293,34 +293,41 @@ html {
   </section>
 
   <section id="equipe">
-    <h2>Nossa Equipe</h2>
-    <div class="team">
-      <div class="member">
-        <div class="cargo">👑 Fundador</div>
-        <img src="https://i.imgur.com/squTW3a.png" alt="Floors">
-        <h3>Floors</h3>
-        <p>Diretor Criativo / Programador</p>
-      </div>
-      <div class="member">
-        <div class="cargo">👑 Fundador</div>
-        <img src="https://i.imgur.com/30gxWJV.png" alt="Chuvemo">
-        <h3>Chuvemo</h3>
-        <p>Idealizador</p>
-      </div>
-      <div class="member">
-        <div class="cargo">👑 Fundador</div>
-        <img src="https://i.imgur.com/1MB8dGm.png" alt="Snow">
-        <h3>Snow</h3>
-        <p>Idealizador</p>
-      </div>
-      <div class="member">
-        <div class="cargo">👑 Diretor</div>
-        <img src="https://i.imgur.com/d6iON22.png" alt="Nasbru">
-        <h3>Nasbru</h3>
-        <p>Criador de Conteúdo / Divulgador</p>
-      </div>
+  <h2>Nossa Equipe</h2>
+  <div class="team">
+    <div class="member">
+      <div class="cargo">👑 Fundador</div>
+      <img src="https://i.imgur.com/squTW3a.png" alt="Floors">
+      <h3>Floors</h3>
+      <p>Diretor Criativo / Programador</p>
     </div>
-  </section>
+    <div class="member">
+      <div class="cargo">👑 Fundador</div>
+      <img src="https://i.imgur.com/30gxWJV.png" alt="Chuvemo">
+      <h3>Chuvemo</h3>
+      <p>Idealizador</p>
+    </div>
+    <div class="member">
+      <div class="cargo">👑 Fundador</div>
+      <img src="https://i.imgur.com/1MB8dGm.png" alt="Snow">
+      <h3>Snow</h3>
+      <p>Idealizador</p>
+    </div>
+    <div class="member">
+      <div class="cargo">👑 Diretor</div>
+      <img src="https://i.imgur.com/d6iON22.png" alt="Nasbru">
+      <h3>Nasbru</h3>
+      <p>Criador de Conteúdo / Divulgador</p>
+    </div>
+    <div class="member">
+      <div class="cargo">💻 Designer</div>
+      <img src="https://i.imgur.com/placeholder.png" alt="NovaPessoa">
+      <h3>NovaPessoa</h3>
+      <p>Designer Gráfico / UI/UX</p>
+    </div>
+  </div>
+</section>
+
 
     <section id="projetos">
     <h2>Projetos</h2>
@@ -369,4 +376,5 @@ html {
     <p>© 2025 Valhesia Studios — Todos os direitos reservados.</p>
   </footer>
 </body>
+
 </html>
