--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@ html {
     </div>
     <div class="member">
       <div class="cargo">💻 Designer</div>
-      <img src="https://i.imgur.com/placeholder.png" alt="NovaPessoa">
-      <h3>NovaPessoa</h3>
-      <p>Designer Gráfico / UI/UX</p>
+      <img src="https://i.imgur.com/8Cc3x6g.png" alt="Gu4xiinim">
+      <h3>Gu4xiinim</h3>
+      <p>Designer Gráfico/Skin Maker</p>
     </div>
   </div>
 </section>
@@ -378,3 +378,4 @@ html {
 </body>
 
 </html>
+
