--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ html {
       <p>Criador de Conteúdo / Divulgador</p>
     </div>
     <div class="member">
-      <div class="cargo">💻 Designer</div>
+      <div class="cargo">👑 Diretor - lore</div>
       <img src="https://i.imgur.com/8Cc3x6g.png" alt="Gu4xiinim">
       <h3>Gu4xiinim</h3>
       <p>Designer Gráfico/Skin Maker</p>
@@ -378,4 +378,5 @@ html {
 </body>
 
 </html>
+
 
