--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="kpis" style="margin-top:12px">
             <div class="kpi"><strong>3+</strong><span>Grandes projetos</span></div>
             <div class="kpi"><strong>+Equipe</strong><span>6 membros</span></div>
-            <div class="kpi"><strong>2025</strong><span>Ano ativo</span></div>
+            <div class="kpi"><strong><h3>2025</h3</strong><span>Ano ativo</span></div>
           </div>
         </div>
       </aside>
@@ -676,3 +676,4 @@
 </script>
 </body>
 </html>
+
