--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     <!-- PORTFÓLIOS INDIVIDUAIS -->
     <section id="equipe" aria-labelledby="equipeTitle">
-  <h2 id="portifoliosTitle" style="font-size:2.2rem;margin-bottom:15px;color:#fff;">🎨 Portfólios da Equipe</h2>
+  <h2 id="portifoliosTitle" style="font-size:2.2rem;margin-bottom:15px;color:#fff;">Equipe <strong>Valhesia Studios </strong> </h2>
   <p class="lead" style="color:#ccc;font-family:Poppins;">Conheça um pouco mais sobre o trabalho e projetos de cada membro do Valhesia Studios.</p>
 
   <div class="portfolio-container" style="display:flex;flex-wrap:wrap;justify-content:center;gap:30px;margin-top:40px;">
@@ -676,3 +676,4 @@
 </script>
 </body>
 </html>
+
