--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <img src="https://i.imgur.com/P35GeDi.png" alt="Adriel" style="width:100%;border-radius:15px;aspect-ratio:1/1;object-fit:cover;margin-bottom:15px;">
       <h3 style="color:#b77bff;">🎨 Adriel</h3>
       <p style="font-size:14px;color:#aaa;">Builder / Idealizador</p>
-      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável pela lore de todos os servidores desenvolvidos pelo Valhesia Studios.</p>
+      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios.</p>
       <a href="#contato" style="display:inline-block;margin-top:15px;background:#8b5cf6;color:#fff;padding:8px 16px;border-radius:10px;text-decoration:none;font-weight:600;">Contato</a>
     </div>
 
@@ -685,5 +685,6 @@
 </script>
 </body>
 </html>
+
 
 
