--- a/index.html
+++ b/index.html
@@ -339,6 +339,15 @@
       <a href="#contato" style="display:inline-block;margin-top:15px;background:#8b5cf6;color:#fff;padding:8px 16px;border-radius:10px;text-decoration:none;font-weight:600;">Contato</a>
     </div>
 
+            <!-- nilo -->
+    <div class="portfolio-card" style="background:#111;border-radius:20px;width:250px;padding:20px;box-shadow:0 0 15px rgba(255,255,255,0.05);transition:0.3s;">
+      <img src="https://i.imgur.com/iqIhIpd.png" alt="Hundred" style="width:100%;border-radius:15px;aspect-ratio:1/1;object-fit:cover;margin-bottom:15px;">
+      <h3 style="color:#b77bff;">🏠 Nilo</h3>
+      <p style="font-size:14px;color:#aaa;">Builder</p>
+      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios.</p>
+      <a href="#contato" style="display:inline-block;margin-top:15px;background:#8b5cf6;color:#fff;padding:8px 16px;border-radius:10px;text-decoration:none;font-weight:600;">Contato</a>
+    </div>
+
     <!-- White -->
     <div class="portfolio-card" style="background:#111;border-radius:20px;width:250px;padding:20px;box-shadow:0 0 15px rgba(255,255,255,0.05);transition:0.3s;">
       <img src="https://i.imgur.com/wDN9W4s.png" alt="White" style="width:100%;border-radius:15px;aspect-ratio:1/1;object-fit:cover;margin-bottom:15px;">
@@ -685,6 +694,7 @@
 </script>
 </body>
 </html>
+
 
 
 
