--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
         <!-- DRIDRI -->
     <div class="portfolio-card" style="background:#111;border-radius:20px;width:250px;padding:20px;box-shadow:0 0 15px rgba(255,255,255,0.05);transition:0.3s;">
       <img src="https://i.imgur.com/P35GeDi.png" alt="Hundred" style="width:100%;border-radius:15px;aspect-ratio:1/1;object-fit:cover;margin-bottom:15px;">
-      <h3 style="color:#b77bff;">🏠 Hundred</h3>
-      <p style="font-size:14px;color:#aaa;">Builder / Idealizador</p>
-      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios.</p>
+      <h3 style="color:#b77bff;">🏠 Yuki</h3>
+      <p style="font-size:14px;color:#aaa;">Builder / Lore Maker</p>
+      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios e responsalvel por lore.</p>
       <a href="#contato" style="display:inline-block;margin-top:15px;background:#8b5cf6;color:#fff;padding:8px 16px;border-radius:10px;text-decoration:none;font-weight:600;">Contato</a>
     </div>
 
@@ -343,8 +343,8 @@
     <div class="portfolio-card" style="background:#111;border-radius:20px;width:250px;padding:20px;box-shadow:0 0 15px rgba(255,255,255,0.05);transition:0.3s;">
       <img src="https://i.imgur.com/iqIhIpd.png" alt="Hundred" style="width:100%;border-radius:15px;aspect-ratio:1/1;object-fit:cover;margin-bottom:15px;">
       <h3 style="color:#b77bff;">🏠 Nilo</h3>
-      <p style="font-size:14px;color:#aaa;">Builder</p>
-      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios.</p>
+      <p style="font-size:14px;color:#aaa;">Builder / Lore Maker</p>
+      <p style="font-size:13px;color:#bbb;margin-top:10px;">Responsável por todas as construçoes feitas pela Valhesia Studios / responsalvel por lore.</p>
       <a href="#contato" style="display:inline-block;margin-top:15px;background:#8b5cf6;color:#fff;padding:8px 16px;border-radius:10px;text-decoration:none;font-weight:600;">Contato</a>
     </div>
 
